# GEANT4B1-rat

./: CMakeLists.txt  README.md  exampleB1.cc  run2.mac  run_experiment.py  runtest.mac
src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
